Added some initial styling & content for the test page.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, height=device-height" />
+    <title>viewport.scss</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
-
+    <h1>viewport.scss</h1>
+    <p>This is a test page for the media queries provided by this micro-lib.</p>
 </body>
 </html>
