Added support for "up-from" queries.

--- a/index.html
+++ b/index.html
@@ -34,5 +34,13 @@
         <li><code>@include viewport(up-to &quot;large&quot;)</code> applies right now</li>
     </ul>
 
+    <h2>Viewports up from a range</h2>
+    <ul id="up-from">
+        <li><code>@include viewport(up-from &quot;tiny&quot;)</code> applies right now</li>
+        <li><code>@include viewport(up-from &quot;small&quot;)</code> applies right now</li>
+        <li><code>@include viewport(up-from &quot;medium&quot;)</code> applies right now</li>
+        <li><code>@include viewport(up-from &quot;large&quot;)</code> applies right now</li>
+    </ul>
+
 </body>
 </html>
