Renamed the main mixin to viewportS.  It sounds better.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, height=device-height" />
-    <title>viewport.scss</title>
+    <title>viewports.scss</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
 
-    <h1>viewport.scss</h1>
+    <h1>viewports.scss</h1>
     <p>This is a test page for the media queries provided by this micro-lib.</p>
 
     <h2>Single range of viewports</h2>
@@ -28,18 +28,18 @@
 
     <h2>Viewports up to a range</h2>
     <ul id="up-to">
-        <li><code>@include viewport(up-to &quot;tiny&quot;)</code> applies right now</li>
-        <li><code>@include viewport(up-to &quot;small&quot;)</code> applies right now</li>
-        <li><code>@include viewport(up-to &quot;medium&quot;)</code> applies right now</li>
-        <li><code>@include viewport(up-to &quot;large&quot;)</code> applies right now</li>
+        <li><code>@include viewports(up-to &quot;tiny&quot;)</code> applies right now</li>
+        <li><code>@include viewports(up-to &quot;small&quot;)</code> applies right now</li>
+        <li><code>@include viewports(up-to &quot;medium&quot;)</code> applies right now</li>
+        <li><code>@include viewports(up-to &quot;large&quot;)</code> applies right now</li>
     </ul>
 
     <h2>Viewports up from a range</h2>
     <ul id="up-from">
-        <li><code>@include viewport(up-from &quot;tiny&quot;)</code> applies right now</li>
-        <li><code>@include viewport(up-from &quot;small&quot;)</code> applies right now</li>
-        <li><code>@include viewport(up-from &quot;medium&quot;)</code> applies right now</li>
-        <li><code>@include viewport(up-from &quot;large&quot;)</code> applies right now</li>
+        <li><code>@include viewports(up-from &quot;tiny&quot;)</code> applies right now</li>
+        <li><code>@include viewports(up-from &quot;small&quot;)</code> applies right now</li>
+        <li><code>@include viewports(up-from &quot;medium&quot;)</code> applies right now</li>
+        <li><code>@include viewports(up-from &quot;large&quot;)</code> applies right now</li>
     </ul>
 
 </body>
