Implemented the range-cursor with pure CSS.
The pixel width counter still with JS, tho.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,16 @@
         <li></li>
     </ul>
 
+    <script>
+        (function() {
+            var $widthCursor = window.document.querySelector('.range-cursor > div');
+            function updateCurrentWidth() {
+                $widthCursor.innerHTML = window.innerWidth + 'px';
+            }
+            window.onresize = updateCurrentWidth;
+            updateCurrentWidth();
+        })();
+    </script>
+
 </body>
 </html>
