--- a/index.html
+++ b/index.html
@@ -17,14 +17,21 @@
     <p>The current viewport is considered <span class="current-range-name"></span>:</p>
     <div class="range-cursor"><div></div></div>
     <ul class="range-scale with-range-names with-pixel-counts">
+        <!-- prepare for at most 10 defined ranges: -->
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
     </ul>
 
     <h2>Query types</h2>
 
+    <p>
+        The samples below demonstrate to which named ranges your styles<br>
+        would apply, should you use <code>@include viewports()</code> with specific arguments.
+    </p>
+
     <h3>Simple</h3>
-    <p>Wrapping styles into <code>@include viewports(<span class="current-range-name"></span>)</code> will match:</p>
+    <p><code>@include viewports(<span class="current-range-name"></span>)</code> will apply to ranges:</p>
     <ul class="range-scale with-range-names with-current-highlighted">
+        <!-- prepare for at most 10 defined ranges: -->
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
     </ul>
     <ul class="match-list">
@@ -32,8 +39,9 @@
     </ul>
 
     <h3>Below</h3>
-    <p>Wrapping styles into <code>@include viewports(below <span class="current-range-name"></span>)</code> will match:</p>
+    <p><code>@include viewports(below <span class="current-range-name"></span>)</code> will apply to ranges:</p>
     <ul class="range-scale with-range-names with-current-highlighted">
+        <!-- prepare for at most 10 defined ranges: -->
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
     </ul>
     <ul class="match-list">
@@ -41,8 +49,9 @@
     </ul>
 
     <h3>Up-to</h3>
-    <p>Wrapping styles into <code>@include viewports(up-to <span class="current-range-name"></span>)</code> will match:</p>
+    <p><code>@include viewports(up-to <span class="current-range-name"></span>)</code> will apply to ranges:</p>
     <ul class="range-scale with-range-names with-current-highlighted">
+        <!-- prepare for at most 10 defined ranges: -->
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
     </ul>
     <ul class="match-list">
@@ -50,8 +59,9 @@
     </ul>
 
     <h3>Up-from</h3>
-    <p>Wrapping styles into <code>@include viewports(up-from <span class="current-range-name"></span>)</code> will match:</p>
+    <p><code>@include viewports(up-from <span class="current-range-name"></span>)</code> will apply to ranges:</p>
     <ul class="range-scale with-range-names with-current-highlighted">
+        <!-- prepare for at most 10 defined ranges: -->
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
     </ul>
     <ul class="match-list">
@@ -59,8 +69,9 @@
     </ul>
 
     <h3>Above</h3>
-    <p>Wrapping styles into <code>@include viewports(above <span class="current-range-name"></span>)</code> will match:</p>
+    <p><code>@include viewports(above <span class="current-range-name"></span>)</code> will apply to ranges:</p>
     <ul class="range-scale with-range-names with-current-highlighted">
+        <!-- prepare for at most 10 defined ranges: -->
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
     </ul>
     <ul class="match-list">
@@ -68,11 +79,17 @@
     </ul>
 
     <h3>Not</h3>
-    <p>Wrapping styles into <code>@include viewports(not <span class="current-range-name"></span>)</code> will match:</p>
+    <p><code>@include viewports(not <span class="current-range-name"></span>)</code> will apply to ranges:</p>
     <ul class="range-scale with-range-names with-current-highlighted">
+        <!-- prepare for at most 10 defined ranges: -->
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
     </ul>
     <ul class="match-list">
+        <!-- prepare for at most 5 matched ranges: -->
+        <li class="query-not"></li>
+        <li class="query-not"></li>
+        <li class="query-not"></li>
+        <li class="query-not"></li>
         <li class="query-not"></li>
     </ul>
 
