Implemented horizontal centering for <body>.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>Query types</h2>
 
     <p>
-        The samples below demonstrate to which named ranges your styles<br>
+        The samples below demonstrate to which named ranges your styles
         would apply, should you use <code>@include viewports()</code> with specific arguments.
     </p>
 
