--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <li class="query-above"></li>
     </ul>
 
-    <p><code>@include viewports(<span class="emphasized">not</span> <span class="current-range-name"></span>)</code> will apply to ranges:</p>
+    <p><code>@include viewports(<span class="emphasized">'not'</span> <span class="current-range-name"></span>)</code> will apply to ranges:</p>
     <ul class="range-scale with-range-names with-current-highlighted">
         <!-- prepare for at most 10 defined ranges: -->
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
@@ -83,6 +83,7 @@
         <li class="query-not"></li>
         <li class="query-not"></li>
     </ul>
+    <p>Note that since &quot;not&quot; is a reserved word in SASS, in this case the operator needs to be quoted.  Sorry about that.</p>
 
     <script>
         (function() {
