--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, height=device-height" />
-    <title>viewports.scss</title>
+    <title>viewports.scss live demo</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
@@ -94,6 +94,22 @@
             window.onresize = updateCurrentWidth;
             updateCurrentWidth();
         })();
+    </script>
+
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-42176157-4']);
+        _gaq.push(['_setDomainName', 'github.com']);
+        _gaq.push(['_setAllowLinker', true]);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
     </script>
 
 </body>
