--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
 
     <h1>viewports.scss</h1>
 
-    <p>The current viewport is considered <span class="current-range-name emphasized"></span>:</p>
+    <p>
+        The current viewport is considered &quot;<span class="current-range-name emphasized"></span>&quot;.
+        Below, you can see which viewport ranges have been configured (you can totally change them)
+        and how they match up with specific viewport widths:
+    </p>
     <div class="range-cursor"><div></div></div>
     <ul class="range-scale with-range-names with-pixel-counts">
         <!-- prepare for at most 10 defined ranges: -->
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
     </ul>
-    <p class="emphasized">Resize your browser to see how matches change.</p>
+    <p class="emphasized">
+        <span class="instruction-downsize">Make your browser window smaller</span>
+        <span class="instruction-resize">Resize your browser</span>
+        to see how matches change.
+    </p>
 
     <h2>Query types</h2>
 
