Added an example of the $VIEWPORTS_DEBUG: true; generated content.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
     </ul>
     <p>Note that since &quot;not&quot; is a reserved word in SASS, in this case the operator needs to be quoted.  Sorry about that.</p>
 
+    <div class="debug-info-explanation">
+        Set <code>$VIEWPORTS_DEBUG: true;</code> in your project,
+        and you'll get this to help with picking your breakpoints!
+        It's completely CSS-generated, so no JS needed.
+    </div>
+
     <script>
         (function() {
             var $widthCursor = window.document.querySelector('.range-cursor > div');
